--- a/todo-list.html
+++ b/todo-list.html
@@ -1,35 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>vue-todo-list</title>
-  <link src="./todo-list.css" />
+  <link rel="stylesheet" href="./todo-list.css">
 </head>
 
 <body>
-  <section id='vue-todo-list'>
-    <section class="title">{{title}}</section>
-    <section>
-      <input type="text" v-model="todoVal" @keyup.enter="addItem" @keyup.esc="clearInput">
+  <section id='vue-todo-list' class="todo-list">
+    <h1 class="title">{{title}}</h1>
+    <section class="wrap">
+        <section class="content">
+            <input class="input" type="text" v-model="todoVal" @keyup.enter="addItem" @keyup.esc="clearInput">
+      
+            <ul>
+              <li class="content-item" v-for="(todoItem, todoIndex) in filterTodoList" :key="todoIndex">
+                <span @click="todoItem.done = !todoItem.done" class="check-box"
+                  v-bind:class="{'check-box-checked': todoItem.done}"></span>
+                <span class="todo-text">{{todoItem.text}}</span>
+                <span class="todo-delete-btn" @click="deleteItem" :data-idx="todoIndex"></span>
+              </li>
+            </ul>
+          </section>
+          <footer class="footer">
+            <a class="filter-btn" href="#/nodone">未完成</a>
+            <a class="filter-btn" href="#/done">已完成</a>
+            <a class="filter-btn" href="#/all">全部</a>
+          </footer>
     </section>
-    <section>
-      <ul>
-        <li v-for="(todoItem, todoIndex) in filterTodoList" :key="todoIndex">
-          <input type="checkbox" v-model="todoItem.done">
-          <span>{{todoItem.text}}</span>
-          <span @click="deleteItem" :data-idx="todoIndex">X</span>
-        </li>
-      </ul>
-    </section>
-    <section>
-
-        <a href="#/nodone">未完成</a>
-        <a href="#/done">已完成</a>
-        <a href="#/all">全部</a>
-
-    </section>
+    
   </section>
 </body>
 <!-- <script src="./vue.js"></script> -->
