--- a/todo-list.html
+++ b/todo-list.html
@@ -13,22 +13,26 @@
   <section id='vue-todo-list' class="todo-list">
     <h1 class="title">{{title}}</h1>
     <section class="wrap">
-        <section class="content">
-            <input placeholder="what needs to be done?" class="input" type="text" v-model="todoVal" @keyup.enter="addItem" @keyup.esc="clearInput">
-            <ul>
-              <li class="content-item" v-for="(todoItem, todoIndex) in filterTodoList" :key="todoIndex">
-                <span @click="todoItem.done = !todoItem.done" class="check-box"
-                  v-bind:class="{'check-box-checked': todoItem.done}"></span>
-                <span class="todo-text">{{todoItem.text}}</span>
-                <span class="todo-delete-btn" @click="deleteItem" :data-idx="todoIndex"></span>
-              </li>
-            </ul>
-          </section>
-          <footer class="footer">
-            <a class="filter-btn" href="#/nodone">未完成</a>
-            <a class="filter-btn" href="#/done">已完成</a>
-            <a class="filter-btn" href="#/all">全部</a>
-          </footer>
+      <section class="content">
+        <div class="input-wrap">
+          <span @click="allDoneFlag = !allDoneFlag" class="all-done-btn" :class="{'all-done-btn-active': allDoneFlag}"></span>
+          <input placeholder="what needs to be done?" class="input" type="text" v-model="todoVal" @keyup.enter="addItem"
+            @keyup.esc="clearInput">
+        </div>
+        <ul>
+          <li class="content-item" v-for="(todoItem, todoIndex) in filterTodoList" :key="todoIndex">
+            <span @click="todoItem.done = !todoItem.done" class="check-box"
+              v-bind:class="{'check-box-checked': todoItem.done}"></span>
+            <span class="todo-text">{{todoItem.text}}</span>
+            <span class="todo-delete-btn" @click="deleteItem" :data-idx="todoIndex"></span>
+          </li>
+        </ul>
+      </section>
+      <footer class="footer">
+        <a class="filter-btn" href="#/nodone">未完成</a>
+        <a class="filter-btn" href="#/done">已完成</a>
+        <a class="filter-btn" href="#/all">全部</a>
+      </footer>
     </section>
   </section>
 </body>
