添加存储到localstorage逻辑

--- a/todo-list.html
+++ b/todo-list.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <section id='vue-todo-list' class="todo-list">
+  <section id='vue-todo-list' class="todo-list" v-cloak>
     <h1 class="title">{{title}}</h1>
     <section class="wrap">
       <section class="content">
