todoList深度监听&文字和全部完成按钮样式过度动画

--- a/todo-list.html
+++ b/todo-list.html
@@ -19,11 +19,11 @@
           <input placeholder="what needs to be done?" class="input" type="text" v-model="todoVal" @keyup.enter="addItem"
             @keyup.esc="clearInput">
         </div>
-        <ul>
+        <ul class="item-list-ul">
           <li class="content-item" v-for="(todoItem, todoIndex) in filterTodoList" :key="todoIndex">
             <span @click="todoItem.done = !todoItem.done" class="check-box"
               v-bind:class="{'check-box-checked': todoItem.done}"></span>
-            <span class="todo-text">{{todoItem.text}}</span>
+            <span class="todo-text" :class="{'todo-text-done': todoItem.done}">{{todoItem.text}}</span>
             <span class="todo-delete-btn" @click="deleteItem" :data-idx="todoIndex"></span>
           </li>
         </ul>
